syntax = "proto3";

package call_assistant.module;

option go_package = "github.com/shocklateboy92/call-assistant/src/api/proto/module";

import "common.proto";
import "entities.proto";

// ModuleService is implemented by each module to handle lifecycle management
service ModuleService {
  // HealthCheck is called periodically by the orchestrator to monitor module health
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Shutdown is called to gracefully stop the module
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
  
  // ListEntities enumerates active entities
  rpc ListEntities(call_assistant.entities.ListEntitiesRequest) returns (call_assistant.entities.ListEntitiesResponse);
}



// Health check messages
message HealthCheckRequest {
  // Empty for now, could include health check parameters in the future
}

message HealthCheckResponse {
  call_assistant.common.ModuleStatus status = 1;
}

// Configuration messages
message ConfigureRequest {
  map<string, string> config = 1;
}

message ConfigureResponse {
  bool success = 1;
  string error_message = 2;
}

// Shutdown messages
message ShutdownRequest {
  bool force = 1; // If true, module should shut down immediately
  int32 timeout_seconds = 2; // How long to wait for graceful shutdown
}

message ShutdownResponse {
  // If error_message is not set, shutdown was successful
  optional string error_message = 2;
}


